--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = ""
 authors = ["Orion-Hunter <silvasalesf@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 numpy = "^1.20.1"
 matplotlib = "^3.3.4"
 PyQt5 = "^5.15.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
