--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 numpy = "^1.20.1"
 matplotlib = "^3.3.4"
 PyQt5 = "^5.15.4"
+opencv-python = "^4.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
