--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ opencv-python = "^4.5.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = {version = "^20.8b1", allow-prereleases = true}
+autopep8 = "^1.5.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
